[project]
name = "uber-analisys"
version = "0.1.0"
description = "Este projeto destina-se à análise de dados de corridas da Uber, seguindo o desafio técnico descrito em docs/PROJECT DOCUMENTATION.md."
authors = [
    {name = "Joao Pedro Santos",email = "jpedro.csantos@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
